some additional styles

--- a/scripts/server/resources/styles/cg.css
+++ b/scripts/server/resources/styles/cg.css
@@ -38,3 +38,34 @@
 .sodad-btn-submit {
     float: right;
 }
+
+.sodad-tooltip-class {
+    position: relative;
+    display: inline-block;
+    border-bottom: 1px dotted black; /* If you want dots under the hoverable text */
+}
+
+/* Tooltip text */
+.sodad-tooltip-class .sodad-tooltiptext-class {
+    visibility: hidden;
+    width: 120px;
+    background-color: black;
+    color: #fff;
+    text-align: center;
+    padding: 5px 0;
+    border-radius: 6px;
+ 
+    /* Position the tooltip text - see examples below! */
+    position: absolute;
+    z-index: 1;
+}
+
+/* Show the tooltip text when you mouse over the tooltip container */
+.sodad-tooltip-class:hover .sodad-tooltiptext-class {
+    visibility: visible;
+}
+
+.sodad-explanation-class {
+    margin-left: 1em;
+    color: blue;
+}
