--- a/scripts/index/index-server/app/views/pwd.scala.html
+++ b/scripts/index/index-server/app/views/pwd.scala.html
@@ -1,10 +1,19 @@
 <!doctype html>
 <html lang="en">
+  <head>
+    <style type="text/css">
+      #sodad-pwd-input-id {
+      text-security: disc;
+      -webkit-text-security: disc;
+      -moz-text-security: disc;      
+      }
+    </style>
+  </head>
   <body>
     <div>
       <form action="/authenticate" method="post">
 	<label for="sodad-pwd-input-id">Password : </label>
-	<input type="text" name="pwd", required="required" />
+	<input type="text" name="pwd", required="required" id="sodad-pwd-input-id" />
 	<input type="submit" value="Submit" />
       </form>
     </div>
