--- a/scripts/index/index-server/app/views/resultitem.scala.html
+++ b/scripts/index/index-server/app/views/resultitem.scala.html
@@ -10,22 +10,41 @@
     @defining(searcher.doc (scoreDoc.doc)){document =>
     @defining(document get "pii"){pii =>
     @defining(PaperLookup (pii)){maybePaper =>
+    @defining(s"sodad-explain-id-$pii"){explanationDivId =>
+    @defining(s"sodad-terms-vector-id-$pii"){termsVectorDivId =>
+    @defining(s"sodad-analysis-id-$pii"){analysisDivId =>
+    @defining(s"sodad-explain-btn-id-$pii"){explanationBtnId =>
+    @defining(s"sodad-terms-vector-btn-id-$pii"){termsVectorBtnId =>
+    @defining(s"sodad-analysis-btn-id-$pii"){analysisBtnId =>
     <div class="sodad-list-paper-pii" id="div-paper-@pii">
-        <span class="sodad-txt-pii-id">@pii</span>
+        <span class="sodad-txt-pii-id"><a href="http://www.sciencedirect.com/science/article/pii/@pii" target="_blank">@pii</a></span>
 	@if(maybePaper.isDefined) {
 	@*
 	Explanation button
 	*@
 	@defining(searcher.explain(query, scoreDoc.doc)){explanation =>
-	@defining(s"sodad-explain-id-$pii"){explanationDivId =>
-	<span class="sodad-tooltip-class" onclick="flipVisibilityForId('@explanationDivId')" style="cursor: pointer;">
-	  Explain
+	<span id='@explanationBtnId' class="sodad-tooltip-class" style="cursor: pointer;">
+	  [Explain]
 	  <span class="sodad-tooltiptext-class">Shows/Hides weighting scheme for this result item</span>
 	</span>
-	<div class="sodad-explanation-class" id="@explanationDivId" style="height: 0px; visibility: hidden;" data-visible="0">
+	<span id='@termsVectorBtnId' class="sodad-tooltip-class" style="cursor: pointer;">
+	  [Terms Vectors]
+	  <span class="sodad-tooltiptext-class">Shows/Hides Indexing Terms Vector (TODO)</span>
+	</span>
+	<span id='@analysisBtnId' class="sodad-tooltip-class" style="cursor: pointer;">
+	  [Analysis]
+	  <span class="sodad-tooltiptext-class">Shows/Hides NLP Analysis (TODO)</span>
+	</span>	
+	<div class="sodad-explanation-class" id="@explanationDivId" style="height: 0px; visibility: hidden;" data-visible="0" data-loaded="1">
 	  @Html(explanation.toHtml())
 	</div>
-	}}
+	<div class="sodad-explanation-class" id="@termsVectorDivId" style="height: 0px; visibility: hidden;" data-visible="0" data-loaded="0">
+	  TERMS VECTOR NOT LOADED
+	</div>
+	<div class="sodad-explanation-class" id="@analysisDivId" style="height: 0px; visibility: hidden;" data-visible="0" data-loaded="1">
+	  ANALYSIS NOT LOADED
+	</div>
+	}
 	@*
 	Paper features
 	*@
@@ -67,7 +86,7 @@
 	    <input id="sodad-controlform-hl-hidden-@pii" name="hl" value="" type="hidden"/>
 	  </form>
 	</div>
-	}}}}
+	}}}
         </div>  
     <script>
       (function () {
@@ -81,9 +100,54 @@
             var t = e.target
             if (t.className === "sodad-hl-radio-class" && t.checked) 
             hiddenHL.value = t.parentNode.textContent
-          }
+         }
+         // handle information divs
+         var fun = function (btnId, divId, others) {
+            var btn = document.getElementById (btnId)
+            if (btn)
+      btn.onclick = function () {
+var idiv = document.getElementById (divId)
+      
+                if (idiv && idiv.dataset.loaded == "0" && SODAD && SODAD.loadHandler)
+                  SODAD.loadHandler ('@pii', 'termsVector', divId)
+                flipVisibilityForId(divId, others)}
+         }
 
+         fun ('@explanationBtnId', '@explanationDivId', ['@termsVectorDivId','@analysisDivId'])
+         fun ('@termsVectorBtnId', '@termsVectorDivId', ['@explanationDivId', '@analysisDivId'])
+         fun ('@analysisBtnId', '@analysisDivId', ['@explanationDivId', '@termsVectorDivId'])
       })()    
     </script>
-    }}}
+    }}}}}}}}}}
 </div>
+<script>
+  var undef
+  var SODAD = {}
+  SODAD.socket = new WebSocket ("ws://" + location.host + "/ws")
+  SODAD.socket.onopen = function () {
+    SODAD.loadHandler = function (pii, what, divid) {
+      var e = document.getElementById (divid)
+      if (e && e.dataset.loaded === "0") {
+        var message = JSON.stringify ({pii: pii, what: what, divid: divid})
+        SODAD.socket.send (message)
+      }
+    }
+
+    SODAD.socket.onclose = function () {
+      SODAD.loadHandler = undef
+    }
+
+    SODAD.socket.onmessage = function (evt) {
+
+      var x = JSON.parse (evt.data)
+      if (x && x.divid && x.content) {
+        var e = document.getElementById (x.divid)
+        if (e) {
+          e.dataset.loaded = "1"
+          e.innerHTML = x.content
+        }
+      }
+    }
+  }
+</script>
+
