set the focus to the input field

--- a/scripts/index/index-server/app/views/pwd.scala.html
+++ b/scripts/index/index-server/app/views/pwd.scala.html
@@ -18,4 +18,8 @@
       </form>
     </div>
   </body>
+  <script>
+    var e = document.getElementById ("sodad-pwd-input-id")
+    if (e) e.focus ()
+  </script>
 </html>
